# yt-playlist-title-extractor

./: README.md  extract_playlist_titles.py  pyproject.toml  requirements.txt
yt_app/: app.py
